--- a/app/globals.css
+++ b/app/globals.css
@@ -109,3 +109,11 @@ body {
 .prose h4 {
   @apply text-card-foreground font-medium text-base;
 }
+
+@media only screen and (max-width: 1200px) {
+  nav div.flex nav ul a,
+  nav div.space-x-3 button {
+    font-size: 14px !important;
+    padding: 8px 12px !important;
+  }
+}
